syntax = "proto3";

package pb_database;

import "rpc_data_database.proto";
// import "data_database.proto";

option go_package = "server-test/server-database/pb_database";


service Database {
    rpc SignUpAcc(SignUpAccResquest) returns (SignUpAccRespone) {
    }

    rpc LoginAcc(LoginAccResquest) returns (LoginAccRespone) {
    }

    rpc UploadFile(UploadFileResquest) returns (UploadFileRespone) {
    }

    rpc GetListUploadFile(GetListFileResquest) returns (GetListFileRespone) {
    }

    rpc ExportTemplateFile(ExportTemplateFileResquest) returns (ExportTemplateFileRespone) {
    }

    rpc ImportFileExcel(ImportFileExcelResquest) returns (ImportFileExcelRespone) {
    }
} 
